--- a/style.css
+++ b/style.css
@@ -10,11 +10,9 @@ header {
 }
 
 main {
-  width: 380px;
-  margin: 20px auto;
+  width: 960px;
+  margin: 50px auto;
   display: flex;
-  background-position: center;
-
 }
 
 .step-box {
@@ -30,8 +28,6 @@ main {
 }
 
 .step-img1 {
-  margin-left: auto;
-  margin-right: auto; 
   height: 150px;
   background-image: url(img/flow01.png);
   background-position: bottom;
@@ -68,12 +64,62 @@ main {
 footer {
   height: 50px;
   background-color: #aaa;
+}
+@media screen and (max-width: 768px) {
+  
+  header {
+    height: 50px;
+    width: 100%;
+    margin-bottom: 50px;
+    background-color: #ff9a4b;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .step-box {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    position: relative;
+    background-color: #eee;
+  }
+
+  .step-box:last-child {
+    margin: 0 auto;
 
 
-.social i {
+
+  .step-img1 {
+    height: 150px;
+    width: 90%;
+    background-image: url(img/flow01.png);
+    background-position: bottom;
+    background-size: cover;
+  }
+
+  .step-img2 {
+    height: 150px;
+    width: 90%;
+    background-image: url(img/flow02.png);
+    background-position: bottom;
+    background-size: cover;
+  }
+
+  .step-img3 {
+    height: 150px;
+    width: 90%;
+    background-image: url(img/flow03.png);
+    background-position: bottom;
+    background-size: cover;
+  }
 }
 
-@media screen and (max-width:768px) {
-  .social i {
-  }
+footer {
+  height: 50px;
+  width: 100%;
+  background-color: #aaa;
+  margin-top: 50px;
 }
